1-400093.log
 --- Init ---
  File "MyBot.py", line 119
 --- Bot used 36 milliseconds ---
-----------------------------------------------------------------------------
 --- Frame #1 ---
    if bestCost > 0 and isFriendly and bestRemaining < 0 and bestRatio != 999.0
 --- Bot used 0 milliseconds ---
ERRORED!
Response received (if any):
    if bestCost > 0 and isFriendly and bestRemaining < 0 and bestRatio != 999.0
 --- Bot was killed. Below is the rest of its output (if any): ---
                                                                              ^
SyntaxError: invalid syntax

 --- End bot output ---